feat(Root) Add '/' endpoint
- Response is a short message + a link to Self-Health Ping
- Fixes #3
